--- a/index.html
+++ b/index.html
@@ -3,12 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
 <head>
 
 <body>
+    <header>
+
+        <div class='header-left'>
+            <ul class='header-left-ul'>
+              <li>About</li>
+              <li>Store</li>
+            </ul>
+        </div>
+
+        <div class='header-right'>
+          <ul class='header-right-ul'>
+            <li>Gmail</li>
+            <li>Images</li>
+            <li>3x3 LOGO</li>
+            <li><botton class='sign-in'>Sign in</botton></li>
+          </ul>
+        </div>
+
+    </header>
 
 
+    <main class='main'>
+
+        <div class='google-logo'>
+          <img src='images/googlelogo_color_272x92dp.png' alt='clasic google logo'>
+        </div>
+
+        <form class='searchbar'>
+            <input type='text'>
+        </form>
+
+        <div class='two bottons'>
+           <botton class='google-search'>Goole Search</botton>
+           <botton class='im-feeling-lucky'>I'm Feeling Lucky</botton>
+        </div>
+
+    </main>
+
+
+    <footer class='footer'>
+
+        <div class='footer-left'>
+          <ul class='footer-left-ul'>
+              <li>Advertising</li>
+              <li>Business</li>
+              <li>How Search works</li>
+          </ul>
+        </div>
+        <div class='footer-right'>
+            <ul class='footer-right-ul'>
+              <li>Privacy</li>
+              <li>Terms</li>
+              <li>Settings</li>
+            </ul>
+        </div>
+
+    </footer>
 
 </body>
 
